# Vi-init-cpp

./: .gitignore  CMakeLists.txt  README.md  bg_small_angle.h  main.cpp  resultados.py  tempCodeRunnerFile.py  vi_init
include/: PointTrack.h  TrackManager.h  bg_optimization.h  bg_small_angle.h  c2p_wrapper.h  camera_utils.h  estimate_state_martinelli.h  euroc_io.h  feature_tracker.h  feature_tracking.h  frame_processor.h  lie_utils.h  multiframe_processor.h  point_track.h  track_manager.h  visualize_tracking.h
scripts/: nonmin_pose_wrapper.py
src/: TrackManager.cpp  bg_optimization.cpp  bg_small_angle.cpp  c2p_wrapper.cpp  camera_utils.cpp  estimate_state_martinelli.cpp  euroc_io.cpp  feature_tracker.cpp  feature_tracking.cpp  frame_processor.cpp  main.cpp  multiframe_processor.cpp  track_manager.cpp  visualize_tracking.cpp
